src/test/ui/parser/bind-struct-early-modifiers.stderr
error: expected `,`
  --> $DIR/bind-struct-early-modifiers.rs:4:19
   |
LL |         Foo { ref x: ref x } => {},
   |                   ^

error: aborting due to previous error

